# django_shop

./: .gitignore  pyproject.toml
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_productimage_options_alter_size_options.py
config/: settings.py  urls.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_orderitem_price.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_role.py
